--- a/.github/workflows/cloudbuild.yml
+++ b/.github/workflows/cloudbuild.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -26,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest gunicorn
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -37,3 +34,10 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+    - name: Deploy to Google Cloud
+      uses: google-github-actions/deploy-appengine@v0
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        key_file: ${{ secrets.GCP_SA_KEY }}
+        entrypoint: 'gunicorn -b 0.0.0.0:8080 app:app'
