--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,31 +5,42 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+  
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest gunicorn
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
+    - name: Lint with flake8
+      run: |
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Test with pytest
       run: |
         pytest
-        
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
-    args:
-      - 'app'
-      - 'deploy'
-    env:
-      - 'GOOGLE_ENTRYPOINT=gunicorn -b :5000 app:app'
+
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@master
+      with:
+        version: 'latest'
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
+
+    - name: Deploy to Google App Engine
+      run: |
+        echo "GOOGLE_ENTRYPOINT=gunicorn -b :5000 app:app" >> $GITHUB_ENV
+        gcloud app deploy
