--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,83 +1,41 @@
-name: Python application
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-  
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-        
-    - name: Install dependencies
-      run: |
+steps:
+  # Step 1: Install dependencies
+  - name: python:3.10
+    id: Install dependencies
+    entrypoint: bash
+    args:
+      - -c
+      - |
         python -m pip install --upgrade pip
-        pip install flake8 pytest gunicorn
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/checkout@v4
-  
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-
-    - name: Install flake8
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-
-    - name: Lint with flake8
-      run: |
+  # Step 2: Run linting with flake8
+  - name: python:3.10
+    id: Lint code
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        python -m pip install flake8
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-
-    - name: Install pytest
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Test with pytest
-      run: |
+  # Step 3: Run tests with pytest
+  - name: python:3.10
+    id: Run tests
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        python -m pip install pytest
         pytest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build, lint, test]
+  # Step 4: Deploy to Google App Engine
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
+    id: Deploy to App Engine
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        gcloud app deploy --quiet --allow-unauthenticated
 
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-      entrypoint: 'gcloud'
-      args:
-      - 'app'
-      - 'deploy'
-      - '--allow-unauthenticated'
-      - '--port=5000'
+timeout: "600s"
